Minor style fix: Missing space in reference popup
(Side effect from c5f0c49)

--- a/console-web/webapp/src/main/resources/VAADIN/themes/openthinclient/views/thinclients.scss
+++ b/console-web/webapp/src/main/resources/VAADIN/themes/openthinclient/views/thinclients.scss
@@ -559,7 +559,7 @@ $ok-button-color: #2db200;
     }
 
     .selectAll {
-      margin: 0 2ch 8px;
+      margin: 8px 2ch;
     }
 
     .table {
